test/param/loop/paramForLoopWrongCountLow.good
paramForLoopWrongCountLow.chpl:1: error: count operators with negative count requires the range to have a high bound
